--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     font-family: "venice-blvd", sans-serif;
     font-weight: 700;
     font-style: normal;
+    font-size: 1.8vw;
 }
 
 img {
@@ -78,9 +79,8 @@ body {
 }
 .btn {
     padding: 10px 15px;
-    border: 1px solid black;
+    border: 1.5px solid black;
     background: none;
-    font-size: 16px;
     border-radius: 10rem;
     width: max-content;
     transition: all 0.3s ease;
@@ -118,7 +118,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    border: 1px solid black;
+    border: 1.5px solid black;
     overflow: scroll;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -141,12 +141,12 @@ body {
     position: fixed;
     right: 1rem;
     top: 1rem;
-    width: 3.5rem;
-    height: 3.5rem;
-    font-size: 1.5rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    font-size: 1rem;
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
-    border: 1px solid black;
+    border: 1.5px solid black;
     border-radius: 10rem;
     padding: 5px 10px;
     cursor: pointer;
