--- a/style.css
+++ b/style.css
@@ -1,3 +1,68 @@
+#intro {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #4000ff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+    color: white;
+    font-size: 5rem;
+    transition: opacity 0.5s ease;
+}
+
+#intro-text {
+    width: 100vw;
+    height: 30vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* border: 1.5px solid rgb(255, 255, 255); */
+    display: none;
+    font-size: 9vw;
+    text-align: center;
+    color: transparent;
+    background: url('cover.png') no-repeat center center;
+    background-size: cover;
+    -webkit-background-clip: text;
+    background-clip: text;
+    font-weight: bold;
+    animation: introFadeOut 0.5s ease forwards;
+    animation-delay: 1s;
+    letter-spacing: -0.4rem;
+    line-height: 5vw;
+    padding: 4rem 1rem 0 1rem;
+}
+
+#intro-text div{
+    font-size: 4vw;
+    letter-spacing: 0;
+}
+
+/* intro 사라질 때 */
+@keyframes introFadeOut {
+    to {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
+/* 숨겨져 있다가 나타나는 버튼들 */
+#buttons {
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 1s ease, visibility 1s ease;
+}
+
+/* 등장할 때 */
+#buttons.show {
+    opacity: 1;
+    visibility: visible;
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -77,6 +142,7 @@ body {
     opacity: 0;
     visibility: hidden;
 }
+
 .btn {
     padding: 10px 15px;
     border: 1.5px solid black;
@@ -86,7 +152,8 @@ body {
     transition: all 0.3s ease;
     position: absolute;
     background-color: white;
-    z-index: 1; /* 기본값 */
+    z-index: 1;
+    /* 기본값 */
 }
 
 .btn:hover {
@@ -94,7 +161,8 @@ body {
     cursor: pointer;
     background-color: black;
     color: white;
-    z-index: 2; /* hover하면 +1 */
+    z-index: 2;
+    /* hover하면 +1 */
 }
 
 .container {
@@ -106,8 +174,8 @@ body {
 }
 
 .content {
-    width: 70vw;
-    height: 70vh;
+    width: 80vw;
+    height: 80vh;
     padding: 1rem;
     border-radius: 1rem;
     background-color: white;
