--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
     padding: 4rem 1rem 0 1rem;
 }
 
-#intro-text div{
+#intro-text div {
     font-size: 4vw;
     letter-spacing: 0;
 }
@@ -55,6 +55,11 @@
     opacity: 0;
     visibility: hidden;
     transition: opacity 1s ease, visibility 1s ease;
+    font-weight: 700;
+}
+
+#buttons span{
+    font-weight: 100;
 }
 
 /* 등장할 때 */
@@ -94,9 +99,18 @@ body {
 
 #main-image {
     height: 70vh;
-    animation: spin 20s linear infinite;
-    transform-style: preserve-3d;
+    /* animation: spin 20s linear infinite; */
+    /* transform-style: preserve-3d; */
     margin-bottom: 20px;
+}
+
+.main-image {
+    transition: all 0.5s ease;
+    pointer-events: painted;
+}
+
+.main-image:hover {
+    transform: scale(1.1);
 }
 
 /* 
@@ -143,6 +157,23 @@ body {
     visibility: hidden;
 }
 
+.title {
+    font-size: 1.75rem;
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+    font-weight: 100;
+    line-height: 1.75rem;
+}
+
+.name {
+    font-size: 0.75rem;
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
+    font-weight: 100;
+}
+
 .btn {
     padding: 10px 15px;
     border: 1.5px solid black;
@@ -159,11 +190,16 @@ body {
 .btn:hover {
     transform: scale(1.2);
     cursor: pointer;
-    background-color: black;
+    background-color: blue;
     color: white;
     z-index: 2;
+    border: 1.5px solid blue;
     /* hover하면 +1 */
 }
+
+/* #intro-wrapper{
+    width: 100%;
+} */
 
 .container {
     display: flex;
@@ -190,10 +226,33 @@ body {
     overflow: scroll;
     display: grid;
     grid-template-columns: 1fr 1.5fr;
-    gap: 1rem;
+    /* gap: 1rem; */
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.5s ease, visibility 0.5s ease;
+    box-shadow: 0 0 50px rgb(0 46 255);
+}
+
+.content-image {
+    position: relative;
+    width: 100%;
+    padding-top: 100%;
+    /* 높이를 너비의 100%로: 정사각형 */
+    overflow: hidden;
+}
+
+.content p{
+    padding-left: 1rem;
+}
+
+.content-image img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    /* 이미지를 정사각형에 맞게 채우기 */
 }
 
 .content.show {
@@ -202,7 +261,11 @@ body {
 }
 
 .content b {
-    font-size: 1.5rem;
+    font-size: 1.75rem;
+}
+
+.content p {
+    font-weight: 100;
 }
 
 #close-button {
@@ -227,4 +290,52 @@ body {
     cursor: pointer;
     background-color: black;
     color: white;
+}
+
+#cover-info {
+    position: fixed;
+    top: 1rem;
+    right: 1rem;
+    font-size: 0.5rem;
+    /* transform: translate(-50%, -50%); */
+    background: white;
+    padding: 30px;
+    border: 1px solid black;
+    /* box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); */
+    display: none;
+    z-index: 1000;
+    max-width: 300px;
+    text-align: center;
+    font-family: sans-serif;
+    box-shadow: 0 0 20px rgb(0 46 255);
+    border-radius: 1rem;
+}
+
+#cover-info b {
+    font-size: 0.75rem;
+    text-align: left;
+}
+
+#cover-info p:first-child {
+    font-weight: 700;
+    font-size: 1rem;
+    padding: 0;
+}
+
+#cover-info p {
+    font-size: 0.75rem;
+    text-align: left;
+    padding-top: 0.5rem;
+    font-weight: 100;
+}
+
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* background: rgba(255, 255, 255, 0.8); */
+    display: none;
+    z-index: 999;
 }
